log
Thu 05 Oct 2023 05:01:08 PM UTC: 
 tests:  0|5
total_score: 0/70
0fe4b9e
Thu 05 Oct 2023 05:06:43 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:13: error: ‘adj_node’ undeclared (first use in this function)
   61 |             adj_node->sudo[i][j] = k;
      |             ^~~~~~~~
sudoku.c:61:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f480af9
Thu 05 Oct 2023 05:07:16 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9fbdf74
Thu 05 Oct 2023 05:07:33 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
8e54ea2
Thu 05 Oct 2023 05:08:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0e6520b
Thu 05 Oct 2023 05:08:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f85c992
Thu 05 Oct 2023 05:39:37 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
fba8826
Thu 05 Oct 2023 05:48:17 PM UTC: 
 sudoku.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:81:32: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   81 |           for (int l = 0; l < 3, l++) {
      |                                ^
sudoku.c:81:37: error: expected ‘;’ before ‘)’ token
   81 |           for (int l = 0; l < 3, l++) {
      |                                     ^
      |                                     ;
cc1: all warnings being treated as errors
Compilation failed
2e30d43
Thu 05 Oct 2023 05:48:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3f79733
Thu 05 Oct 2023 05:50:52 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
c4ee752
Thu 05 Oct 2023 05:51:24 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
dc42e0c
Fri 06 Oct 2023 04:33:56 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
2034f8e
Fri 06 Oct 2023 04:42:04 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|3
total_score: 35/70
33cdbcf
Fri 06 Oct 2023 04:42:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
51dfbb0
Fri 06 Oct 2023 04:42:35 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
f90893e
Fri 06 Oct 2023 05:15:44 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:141:12: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  141 |   while (! isEmpty(stack)) {
      |            ^~~~~~~
      |            is_empty
sudoku.c:144:21: error: void value not ignored as it ought to be
  144 |     Node* current = pop(stack);
      |                     ^~~
sudoku.c:147:7: error: implicit declaration of function ‘destroyStack’ [-Werror=implicit-function-declaration]
  147 |       destroyStack(stack);
      |       ^~~~~~~~~~~~
sudoku.c:154:23: error: void value not ignored as it ought to be
  154 |     while ((temp_node = popFront(adj_nodes)) == NULL) {
      |                       ^
sudoku.c:158:5: error: implicit declaration of function ‘destroyList’ [-Werror=implicit-function-declaration]
  158 |     destroyList(adj_nodes);
      |     ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b700b63
Fri 06 Oct 2023 06:41:48 PM UTC: 
 sudoku.c | 22 ----------------------
 1 file changed, 22 deletions(-)
 tests:  6|2
total_score: 45/70
676aa36
